Fix sizing and spacing to allow for more breathing room between elements

--- a/public/styles/follower-tweets.css
+++ b/public/styles/follower-tweets.css
@@ -5,7 +5,7 @@ article {
 }
 
 .box:hover {
-  box-shadow: 3px 3px #698af7;
+  box-shadow: 3px 3px 5px #698af7;
 }
 
 .header-article {
@@ -24,17 +24,19 @@ article {
 }
 
 .name {
+  font-size: .75em;
   padding-left: 10px;
   color: rgb(64, 86, 161, 0.4);
 }
 
 .follower-handle {
+  font-size: .75em;
   color: rgb(64, 86, 161, 0.4)
 }
 
 footer {
   padding-top: 10px;
-  font-size: 0.75em;
+  font-size: 0.625em;
   display: flex;
   justify-content: space-between;
 }
